--- a/src/App.css
+++ b/src/App.css
@@ -159,3 +159,51 @@
   font-size: 1.2rem;
   font-weight: 700;
 }
+
+:root {
+  --gradient: linear-gradient(to left top, #DD2476 10%, #FF512F 90%) !important;
+}
+
+.btn {
+  border: 5px solid;
+  border-image-slice: 1;
+  background: var(--gradient) !important;
+  -webkit-background-clip: text !important;
+  -webkit-text-fill-color: transparent !important;
+  border-image-source:  var(--gradient) !important; 
+  text-decoration: none;
+  transition: all .4s ease;
+}
+
+.btn:hover, .btn:focus {
+      background: var(--gradient) !important;
+  -webkit-background-clip: none !important;
+  -webkit-text-fill-color: #fff !important;
+  border: 5px solid #fff !important; 
+  box-shadow: #222 1px 0 10px;
+  text-decoration: underline;
+}
+.dark-card {
+  background: #222;
+  border: 2px solid #dd2476;
+  color: rgba(250, 250, 250, 0.8);
+  margin-bottom: 2rem;
+}
+
+.btn-dark {
+  background-color: #333;
+  color: white;
+}
+
+/* Light mode */
+.light-card {
+  background: #f8f9fa;
+  border: 2px solid #dee2e6;
+  color: #333;
+  margin-bottom: 2rem;
+}
+
+.btn-light {
+  background-color: #f8f9fa;
+  color: #333;
+}
